# zensight

./: .dockerignore  .gitignore  ANALYSIS.md  ARCHITECTURE.md  BRIDGE_REVIEW.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPECIALIZED_VIEWS_PLAN.md  STATUS.md  UI_IMPROVEMENTS_PLAN.md  ZENOH_FEATURES_PLAN.md  example.yml  justfile  zensight_toolbx_1781730565.csv
zenoh-blob/: Cargo.standalone.toml  Cargo.toml  README.md
zenoh-blob/.github/workflows/: ci.yml
zenoh-blob/src/: cancel.rs  chunk.rs  client.rs  error.rs  format.rs  hash.rs  lib.rs  manifest.rs  progress.rs  publish.rs  resume.rs  server.rs  store.rs  tree.rs
zenoh-blob/tests/: cancel.rs  resume.rs  roundtrip.rs  storage.rs  tamper.rs  tree.rs
zenoh-blob/tests/common/: mod.rs
zenoh-bridge-gnmi/: Cargo.toml  README.md  build.rs
zenoh-bridge-gnmi/src/: config.rs  lib.rs  main.rs  subscriber.rs
zenoh-bridge-modbus/: Cargo.toml  README.md
zenoh-bridge-modbus/src/: config.rs  lib.rs  main.rs  poller.rs
zenoh-bridge-netflow/: Cargo.toml  README.md
zenoh-bridge-netflow/src/: config.rs  lib.rs  main.rs  receiver.rs
zenoh-bridge-snmp/: Cargo.toml  README.md
zenoh-bridge-snmp/src/: config.rs  main.rs  mib.rs  oid.rs  poller.rs  trap.rs
zenoh-bridge-snmp/tests/: integration.rs
zenoh-bridge-sysinfo/: Cargo.toml  README.md
zenoh-bridge-sysinfo/src/: collector.rs  config.rs  lib.rs  linux.rs  main.rs
zenoh-bridge-syslog/: Cargo.toml  README.md
zenoh-bridge-syslog/src/: commands.rs  config.rs  filter.rs  lib.rs  main.rs  parser.rs  receiver.rs
zensight/: Cargo.toml  README.md
zensight-aggregates/: Cargo.toml
zensight-aggregates/src/: lib.rs
zensight-bridge-framework/: Cargo.toml
zensight-bridge-framework/src/: advanced_publisher.rs  args.rs  config.rs  correlation.rs  error.rs  health.rs  lib.rs  liveliness.rs  publisher.rs  runner.rs  status.rs
zensight-common/: Cargo.toml  README.md
zensight-common/src/: alert.rs  command.rs  comparison.rs  config.rs  error.rs  health.rs  keyexpr.rs  lib.rs  query_detail.rs  report.rs  semconv.rs  serialization.rs  session.rs  snapshot.rs  telemetry.rs
zensight-common/tests/: integration.rs  zenoh_e2e.rs
zensight-exporter-otel/: Cargo.toml  README.md
zensight-exporter-otel/src/: config.rs  exporter.rs  lib.rs  logs.rs  main.rs  metrics.rs  subscriber.rs
zensight-exporter-otel/tests/: integration_test.rs
zensight-exporter-prometheus/: Cargo.toml  README.md
zensight-exporter-prometheus/src/: alerts.rs  collector.rs  config.rs  http.rs  lib.rs  main.rs  mapping.rs  subscriber.rs
zensight-exporter-prometheus/tests/: integration_test.rs
zensight-sensor-core/: Cargo.toml
zensight-sensor-core/src/: advanced_publisher.rs  alert.rs  args.rs  config.rs  correlation.rs  error.rs  health.rs  lib.rs  liveliness.rs  publisher.rs  report.rs  runner.rs  snapshot.rs  status.rs
zensight-sensor-core/tests/: alert_reporter.rs  report_channel.rs  snapshot_channel.rs
zensight-sensor-gnmi/: Cargo.toml  README.md
zensight-sensor-gnmi/src/: config.rs  lib.rs  main.rs  subscriber.rs
zensight-sensor-logs/: Cargo.toml  README.md
zensight-sensor-logs/src/: commands.rs  config.rs  derived.rs  events.rs  ingest.rs  journald.rs  lib.rs  main.rs  multiline.rs  novelty.rs  parser.rs  receiver.rs  template.rs
zensight-sensor-modbus/: Cargo.toml  README.md
zensight-sensor-modbus/src/: config.rs  lib.rs  main.rs  poller.rs
zensight-sensor-netflow/: Cargo.toml  README.md
zensight-sensor-netflow/src/: config.rs  lib.rs  main.rs  receiver.rs
zensight-sensor-netlink/: Cargo.toml  README.md  build.rs
zensight-sensor-netlink-ebpf/: Cargo.toml  rust-toolchain.toml
zensight-sensor-netlink-ebpf-common/: Cargo.toml
zensight-sensor-netlink-ebpf-common/src/: lib.rs
zensight-sensor-netlink-ebpf/src/: main.rs
zensight-sensor-netlink/src/: aggregate.rs  collector.rs  command.rs  config.rs  ebpf.rs  events.rs  lib.rs  main.rs  map.rs  query.rs  route_history.rs  sentinel.rs  xfrm_sentinel.rs
zensight-sensor-netring/: Cargo.toml  README.md
zensight-sensor-netring/src/: command.rs  config.rs  exfil.rs  lateral.rs  lib.rs  main.rs  map.rs  monitor.rs  publish.rs  query.rs  shed.rs
zensight-sensor-snmp/: Cargo.toml  README.md
zensight-sensor-snmp/src/: config.rs  main.rs  mib.rs  oid.rs  poller.rs  trap.rs
zensight-sensor-snmp/tests/: integration.rs
zensight-sensor-sysinfo/: Cargo.toml  README.md  build.rs
zensight-sensor-sysinfo-ebpf/: Cargo.toml  rust-toolchain.toml
zensight-sensor-sysinfo-ebpf-common/: Cargo.toml
zensight-sensor-sysinfo-ebpf-common/src/: lib.rs
zensight-sensor-sysinfo-ebpf/.cargo/: config.toml
zensight-sensor-sysinfo-ebpf/src/: main.rs
zensight-sensor-sysinfo/src/: alerts.rs  collector.rs  config.rs  ebpf.rs  lib.rs  linux.rs  main.rs  map.rs  query.rs  saturation.rs
zensight-sensor-syslog/: Cargo.toml  README.md
zensight-sensor-syslog/src/: aggregate.rs  commands.rs  config.rs  events.rs  filter.rs  journald.rs  lib.rs  main.rs  receiver.rs
zensight-sensor-systemd/: Cargo.toml
zensight-sensor-systemd/src/: action.rs  alerts.rs  cgroup.rs  collector.rs  command.rs  config.rs  dbus.rs  events.rs  journal.rs  lib.rs  main.rs  map.rs  query.rs  sentinel.rs  unit.rs
zensight/src/: app.rs  demo.rs  lib.rs  main.rs  message.rs  mock.rs  store.rs  subscription.rs
zensight/src/view/: alerts.rs  blob_fetch.rs  chart.rs  dashboard.rs  detection_tuning.rs  device.rs  dir_fetch.rs  expectations.rs  formatting.rs  freshness.rs  groups.rs  health.rs  help.rs  host.rs  incident.rs  inventory.rs  mod.rs  palette.rs  search.rs  security.rs  sensors.rs  settings.rs  shell.rs  theme.rs  toast.rs  tokens.rs  trend.rs
zensight/src/view/components/: data_table.rs  gauge.rs  kit.rs  mod.rs  progress_bar.rs  sparkline.rs  status_led.rs  tabs.rs
zensight/src/view/icons/: mod.rs
zensight/src/view/overview/: gnmi.rs  mod.rs  modbus.rs  netflow.rs  netlink.rs  netring.rs  snmp.rs  sysinfo.rs  syslog.rs
zensight/src/view/specialized/: fetch.rs  gnmi.rs  mod.rs  modbus.rs  netflow.rs  (+10 more)
zensight/tests/: ui_tests.rs
(+97 files in other folders)
