[workspace]
resolver = "2"
members = [
    "zensight",
    "zensight-common",
    "zensight-sensor-core",
    "zensight-exporter-prometheus",
    "zensight-exporter-otel",
    "zensight-sensor-snmp",
    "zensight-sensor-syslog",
    "zensight-sensor-netflow",
    "zensight-sensor-modbus",
    "zensight-sensor-sysinfo",
    "zensight-sensor-gnmi",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/p13marc/zensight"
authors = ["Marc Pardo <p13marc@gmail.com>"]

[workspace.dependencies]
# Zenoh
zenoh = { version = "1.0", features = ["unstable"] }
zenoh-ext = { version = "1.0", features = ["unstable"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

# Configuration
json5 = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Platform utilities
dirs = "5"

# Internal crates
zensight-common = { path = "zensight-common" }
zensight-sensor-core = { path = "zensight-sensor-core" }
