[workspace]
resolver = "2"
members = [
    "zensight",
    "zensight-common",
    "zensight-sensor-core",
    "zensight-exporter-prometheus",
    "zensight-exporter-otel",
    "zensight-sensor-snmp",
    "zensight-sensor-logs",
    "zensight-sensor-netflow",
    "zensight-sensor-modbus",
    "zensight-sensor-sysinfo",
    "zensight-sensor-gnmi",
    "zensight-sensor-netlink",
    "zensight-sensor-netring",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/p13marc/zensight"
authors = ["Marc Pardo <p13marc@gmail.com>"]

[workspace.dependencies]
# Zenoh
zenoh = { version = "1.9", features = ["unstable"] }
zenoh-ext = { version = "1.9", features = ["unstable"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

# Configuration
json5 = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Platform utilities
dirs = "5"
# Native file dialogs (export save-as, #37). xdg-portal backend avoids a hard
# GTK system-lib dependency (uses the desktop portal over D-Bus via ashpd).
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
# Desktop notifications for CRITICAL alert transitions (#26, opt-in). On Linux it
# uses the freedesktop notification spec over D-Bus (zbus, already pulled by rfd).
notify-rust = "4"

# Internal crates
zensight-common = { path = "zensight-common" }
zensight-sensor-core = { path = "zensight-sensor-core" }
