[workspace]
resolver = "2"
members = [
    "zensight",
    "zensight-common",
    "zensight-sensor-core",
    "zensight-exporter-prometheus",
    "zensight-exporter-otel",
    "zensight-sensor-snmp",
    "zensight-sensor-logs",
    "zensight-sensor-netflow",
    "zensight-sensor-modbus",
    "zensight-sensor-sysinfo",
    "zensight-sensor-gnmi",
    "zensight-sensor-netlink",
    "zensight-sensor-netring",
    "zenoh-blob",
    # no_std types shared between the opt-in eBPF kernel programs and userspace.
    # Plain libs — build fine on stable; harmless in `cargo build --workspace`.
    # The eBPF *program* crates are also members so `aya-build` can resolve them
    # by `--package`, but they compile to empty host stubs off the `bpf` target
    # (aya-ebpf is target-gated) — `cargo build --workspace` on stable stays
    # green; the real programs are built only by the parent's build.rs via
    # aya-build under `--features ebpf` (#99/#114).
    "zensight-sensor-sysinfo-ebpf-common",
    "zensight-sensor-sysinfo-ebpf",
    "zensight-sensor-netlink-ebpf-common",
    "zensight-sensor-netlink-ebpf",
]

[workspace.package]
version = "0.6.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/p13marc/zensight"
authors = ["Marc Pardo <p13marc@gmail.com>"]

[workspace.dependencies]
# Zenoh
zenoh = { version = "1.9", features = ["unstable"] }
zenoh-ext = { version = "1.9", features = ["unstable"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

# Hashing (blob integrity — promoted from a transitive pin)
sha2 = "0.10"

# Content-defined chunking (zenoh-blob Tier-2 cross-version dedup, #200)
fastcdc = "4"

# Debug-report bundling + ids (zenoh-blob adapter, #196)
ulid = { version = "1", features = ["serde"] }
tar = "0.4"
zstd = "0.13"
tempfile = "3"

# Configuration
json5 = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Platform utilities
dirs = "5"
# Native file dialogs (export save-as, #37). xdg-portal backend avoids a hard
# GTK system-lib dependency (uses the desktop portal over D-Bus via ashpd).
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
# Desktop notifications for CRITICAL alert transitions (#26, opt-in). On Linux it
# uses the freedesktop notification spec over D-Bus (zbus, already pulled by rfd).
notify-rust = "4"

# eBPF (opt-in `ebpf` feature on sysinfo/netlink sensors only — #99/#114).
# Userspace side; the kernel side pulls aya-ebpf/aya-log-ebpf from the program
# crates. VERIFY-LATEST on crates.io before merging.
aya = "0.13"
aya-log = "0.2"
aya-build = "0.1"

# Internal crates
zensight-common = { path = "zensight-common" }
zensight-sensor-core = { path = "zensight-sensor-core" }
# Generic resumable chunked blob transfer over Zenoh (zero ZenSight types;
# incubated in-tree, to graduate to its own repo + crates.io — epic #193).
zenoh-blob = { path = "zenoh-blob" }
