[package]
name = "zenoh-blob"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic resumable chunked blob transfer over Zenoh (Tier-1 single blob)"

[dependencies]
zenoh.workspace = true
tokio = { workspace = true }
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
thiserror.workspace = true
sha2.workspace = true
fastcdc.workspace = true

[dev-dependencies]
tempfile = "3"
