[package]
name = "zenoh-blob"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic resumable chunked blob & directory transfer over Zenoh (progress, SHA-256, resume)"
# Publish-ready metadata (see docs/ZENOH-BLOB-GRADUATION.md). `readme` and these
# keys also apply while the crate is incubated in the ZenSight workspace.
readme = "README.md"
keywords = ["zenoh", "transfer", "chunked", "resume", "content-addressed"]
categories = ["network-programming", "filesystem"]
rust-version = "1.85"

[dependencies]
zenoh.workspace = true
tokio = { workspace = true }
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
thiserror.workspace = true
sha2.workspace = true
fastcdc.workspace = true

[dev-dependencies]
tempfile = "3"
