[package]
name = "zenoh-bridge-gnmi"
version = "0.1.0"
edition = "2024"
authors = ["ZenSight Contributors"]
description = "Zenoh bridge for gNMI (gRPC Network Management Interface) streaming telemetry"
license = "Apache-2.0"

[dependencies]
zensight-common = { path = "../zensight-common" }

# Async runtime
tokio = { workspace = true, features = ["full", "sync", "time"] }

# gRPC
tonic = { version = "0.13", features = ["transport", "tls-ring", "tls-native-roots"] }
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"

# CBOR serialization
ciborium.workspace = true

# Zenoh
zenoh.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
json5.workspace = true

# CLI
clap = { workspace = true, features = ["derive"] }

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time
chrono = "0.4"

# TLS support
tokio-rustls = "0.26"
rustls-pemfile = "2"

[build-dependencies]
tonic-build = "0.13"

[[bin]]
name = "zenoh-bridge-gnmi"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
