[package]
name = "zenoh-bridge-snmp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zenoh bridge for SNMP telemetry"

[[bin]]
name = "zenoh-bridge-snmp"
path = "src/main.rs"

[dependencies]
zensight-common.workspace = true
zenoh.workspace = true
tokio.workspace = true
tracing.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

# SNMP client (async with tokio)
snmp2 = { version = "0.3", features = ["tokio"] }
