[package]
name = "zenoh-bridge-snmp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zenoh bridge for SNMP telemetry"

[[bin]]
name = "zenoh-bridge-snmp"
path = "src/main.rs"

[dependencies]
zensight-common.workspace = true
zenoh.workspace = true
tokio.workspace = true
tracing.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
json5.workspace = true

# SNMP client (async with tokio, v3 for SNMPv3/USM support)
snmp2 = { version = "0.4", features = ["tokio", "v3"] }

# SNMP PDU decoding (for trap parsing)
rasn = "0.22"
rasn-smi = "0.22"
rasn-snmp = "0.22"
