[package]
name = "zenoh-bridge-sysinfo"
version = "0.1.0"
edition = "2024"
authors = ["ZenSight Contributors"]
description = "Zenoh bridge for system monitoring (CPU, memory, disk, network)"
license = "Apache-2.0"

[dependencies]
zensight-common = { path = "../zensight-common" }

# System information
sysinfo = "0.33"

# Async runtime
tokio = { workspace = true, features = ["full", "sync", "time"] }

# Zenoh
zenoh.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
json5.workspace = true

# CLI
clap = { workspace = true, features = ["derive"] }

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time
chrono = "0.4"

# Hostname detection
hostname = "0.4"

[[bin]]
name = "zenoh-bridge-sysinfo"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
