[package]
name = "zenoh-bridge-syslog"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zenoh bridge for Syslog telemetry"

[[bin]]
name = "zenoh-bridge-syslog"
path = "src/main.rs"

[dependencies]
zensight-common.workspace = true
zensight-bridge-framework.workspace = true
zenoh.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
json5.workspace = true

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex for syslog parsing
regex = "1"

# Lazy static for compiled regexes
once_cell = "1"

[dev-dependencies]
tokio-test = "0.4"
