[package]
name = "zenoh-bridge-syslog"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zenoh bridge for Syslog telemetry"

[[bin]]
name = "zenoh-bridge-syslog"
path = "src/main.rs"

[dependencies]
zensight-common.workspace = true
zensight-bridge-framework.workspace = true
zenoh.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
json5.workspace = true

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex for syslog parsing
regex = "1"

# Lazy static for compiled regexes
once_cell = "1"

# UUID for filter IDs
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"

# =============================================================================
# Package metadata for cargo-deb
# =============================================================================
[package.metadata.deb]
maintainer = "Marc Pardo <p13marc@gmail.com>"
copyright = "2024, Marc Pardo"
license-file = ["../LICENSE", "0"]
extended-description = """Zenoh bridge for Syslog telemetry. Receives syslog messages via
UDP, TCP, or Unix socket and publishes them to Zenoh for consumption
by ZenSight or other Zenoh subscribers."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/zenoh-bridge-syslog", "usr/bin/", "755"],
]
depends = "$auto"

# =============================================================================
# Package metadata for cargo-generate-rpm
# =============================================================================
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/zenoh-bridge-syslog", dest = "/usr/bin/zenoh-bridge-syslog", mode = "755" },
]
