[package]
name = "zensight-exporter-otel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenTelemetry exporter for ZenSight telemetry"

[dependencies]
# Internal crates
zensight-common = { path = "../zensight-common" }

# Zenoh
zenoh.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true

# Configuration
json5.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# CLI
clap.workspace = true

# OpenTelemetry
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "metrics", "logs"] }

# Utilities
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"

# =============================================================================
# Package metadata for cargo-deb
# =============================================================================
[package.metadata.deb]
maintainer = "Marc Pardo <p13marc@gmail.com>"
copyright = "2024, Marc Pardo"
license-file = ["../LICENSE", "0"]
extended-description = """OpenTelemetry exporter for ZenSight telemetry. Subscribes to
Zenoh telemetry and exports metrics and logs via OTLP (gRPC or HTTP)
to OpenTelemetry-compatible backends."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/zensight-exporter-otel", "usr/bin/", "755"],
    ["../packaging/systemd/zensight-exporter-otel.service", "lib/systemd/system/", "644"],
    ["../configs/otel-exporter.json5", "etc/zensight/otel-exporter.json5", "644"],
]
conf-files = ["/etc/zensight/otel-exporter.json5"]
depends = "$auto"

# =============================================================================
# Package metadata for cargo-generate-rpm
# =============================================================================
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/zensight-exporter-otel", dest = "/usr/bin/zensight-exporter-otel", mode = "755" },
    { source = "../packaging/systemd/zensight-exporter-otel.service", dest = "/lib/systemd/system/zensight-exporter-otel.service", mode = "644" },
    { source = "../configs/otel-exporter.json5", dest = "/etc/zensight/otel-exporter.json5", mode = "644", config = true },
]
