[package]
name = "zensight-sensor-gnmi"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Zenoh sensor for gNMI (gRPC Network Management Interface) streaming telemetry"
license = "Apache-2.0"

[dependencies]
zensight-common = { path = "../zensight-common" }
zensight-sensor-core = { path = "../zensight-sensor-core" }
hostname = "0.4"

# Async runtime
tokio = { workspace = true, features = ["full", "sync", "time"] }

# gRPC
tonic = { version = "0.13", features = ["transport", "tls-ring", "tls-native-roots"] }
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"

# CBOR serialization
ciborium.workspace = true

# Zenoh
zenoh.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
json5.workspace = true

# CLI
clap = { workspace = true, features = ["derive"] }

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time
chrono = "0.4"

# TLS support
tokio-rustls = "0.26"
rustls-pemfile = "2"

[build-dependencies]
tonic-build = "0.13"

[[bin]]
name = "zensight-sensor-gnmi"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

# =============================================================================
# Package metadata for cargo-deb
# =============================================================================
[package.metadata.deb]
maintainer = "Marc Pardo <p13marc@gmail.com>"
copyright = "2024, Marc Pardo"
license-file = ["../LICENSE", "0"]
extended-description = """Zenoh sensor for gNMI streaming telemetry. Subscribes to gNMI
targets and publishes their telemetry to Zenoh for consumption by ZenSight
or other Zenoh subscribers."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/zensight-sensor-gnmi", "usr/bin/", "755"],
    ["../packaging/systemd/zensight-sensor-gnmi.service", "lib/systemd/system/", "644"],
    ["../configs/gnmi.json5", "etc/zensight/gnmi.json5", "644"],
]
conf-files = ["/etc/zensight/gnmi.json5"]
depends = "$auto"

# =============================================================================
# Package metadata for cargo-generate-rpm
# =============================================================================
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/zensight-sensor-gnmi", dest = "/usr/bin/zensight-sensor-gnmi", mode = "755" },
    { source = "../packaging/systemd/zensight-sensor-gnmi.service", dest = "/lib/systemd/system/zensight-sensor-gnmi.service", mode = "644" },
    { source = "../configs/gnmi.json5", dest = "/etc/zensight/gnmi.json5", mode = "644", config = true },
]
