[package]
name = "zensight-sensor-logs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zenoh sensor for logs telemetry (network syslog + systemd-journald)"

[[bin]]
name = "zensight-sensor-logs"
path = "src/main.rs"

[dependencies]
zensight-common.workspace = true
zensight-sensor-core.workspace = true
zenoh.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
json5.workspace = true

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex for syslog parsing
regex = "1"

# Lazy static for compiled regexes
once_cell = "1"

# UUID for filter IDs
uuid = { version = "1", features = ["v4"] }

# Local hostname for the derived-telemetry source (#63).
hostname = "0.4"

# systemd-journald ingestion (#57). Links libsystemd; reads the local journal
# unprivileged (full system journal needs the systemd-journal/adm group).
# systemd_v245 unlocks sd_journal_open_namespace (libsystemd ≥ 245, ubiquitous).
systemd = { version = "0.10", optional = true, features = ["systemd_v245"] }

[features]
# journald ingestion is on by default (Linux observability target). Disable with
# `--no-default-features` on platforms without libsystemd.
default = ["journald"]
journald = ["dep:systemd"]

[dev-dependencies]
tokio-test = "0.4"

# =============================================================================
# Package metadata for cargo-deb
# =============================================================================
[package.metadata.deb]
maintainer = "Marc Pardo <p13marc@gmail.com>"
copyright = "2024, Marc Pardo"
license-file = ["../LICENSE", "0"]
extended-description = """Zenoh sensor for logs telemetry. Ingests network syslog
(UDP, TCP, Unix socket) and the local systemd-journald, publishing to Zenoh for
consumption by ZenSight or other Zenoh subscribers."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/zensight-sensor-logs", "usr/bin/", "755"],
    ["../packaging/systemd/zensight-sensor-logs.service", "lib/systemd/system/", "644"],
    ["../configs/logs.json5", "etc/zensight/logs.json5", "644"],
]
conf-files = ["/etc/zensight/logs.json5"]
depends = "$auto"

# =============================================================================
# Package metadata for cargo-generate-rpm
# =============================================================================
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/zensight-sensor-logs", dest = "/usr/bin/zensight-sensor-logs", mode = "755" },
    { source = "../packaging/systemd/zensight-sensor-logs.service", dest = "/lib/systemd/system/zensight-sensor-logs.service", mode = "644" },
    { source = "../configs/logs.json5", dest = "/etc/zensight/logs.json5", mode = "644", config = true },
]
