[package]
name = "zensight-sensor-modbus"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Zenoh sensor for Modbus protocol (TCP/RTU)"
license = "Apache-2.0"

[dependencies]
zensight-common = { path = "../zensight-common" }
zensight-sensor-core = { path = "../zensight-sensor-core" }

# Async runtime
tokio = { workspace = true, features = ["full", "net", "sync", "time", "io-util"] }
tokio-serial = "5.4"

# Modbus protocol
tokio-modbus = { version = "0.16", default-features = false, features = ["tcp", "rtu"] }

# Zenoh
zenoh.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
json5.workspace = true

# CLI
clap = { workspace = true, features = ["derive"] }

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time
chrono = "0.4"

[[bin]]
name = "zensight-sensor-modbus"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
